--- a/techmon/Base.lproj/Main.storyboard
+++ b/techmon/Base.lproj/Main.storyboard
@@ -132,6 +132,9 @@
                                 <state key="normal" title="こうげき" backgroundImage="gold_button.png">
                                     <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="playerAttack" destination="RS2-9V-cHe" eventType="touchUpInside" id="scG-Io-zQv"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
